--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 <body>
     <form class="formulario">
         <h2>formulario</h2>
-        <label for="nombre">nombre</label>
+        <label for="nombre">Nombre</label>
         <input type="text" id="nombre" name="nombre" placeholder="nombre" required> <br> <br>
-        <label for="apellido">apellido</label> 
+        <label for="apellido">Apellido</label> 
         <input type="text" id="apellido" name="apellido" placeholder="apellido" required> <br> <br>
-        <label for="tipo de documento">tipo de documento</label>
+        <label for="tipo de documento">Tipo de documento</label>
         <select name="tipo de documento">
-            <option value="cedula de ciudadania"> cedula de ciudadania</option>
-            <option value="tarjeta de identidad"> tarjeta de identidad</option>
-            <option value="cedula de extranjeria"> cedula de extranjeria</option>
+            <option value="cedula de ciudadania"> Cedula de ciudadania</option>
+            <option value="tarjeta de identidad"> Tarjeta de identidad</option>
+            <option value="cedula de extranjeria"> Cedula de extranjeria</option>
         </select> <br> <br>
-        <label for="numero de documento">numero de documento</label>
+        <label for="numero de documento">Numero de documento</label>
         <input type="text" id="numero de documento" name="numero de documento" placeholder="numero de documento" required> <br> <br>    
-        <label for="correo">correo</label>
+        <label for="correo">Correo</label>
         <input type="mail" id="correo" name="correo" placeholder="correo" required> <br> <br>
-        <label for="contraseña">contraseña</label>
+        <label for="contraseña">Contraseña</label>
         <input type="password" id="contraseña" name="contraseña" placeholder="contraseña" required> <br> <br>
-        <label for="masculino">masculino</label>
+        <label for="masculino">Masculino</label>
         <input type="radio" id "masculino" name="masculino-femenino"><br> <br>
-        <label for="femenino">femenino</label>
+        <label for="femenino">Femenino</label>
         <input type="radio" id "femenino" name="masculino-femenino"><br> <br>
          
         <input class="boton" type="submit">
